# shuttle-shellcon

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.devcontainer/: .dockerignore  Dockerfile  devcontainer-fallback.json  devcontainer-published.json  devcontainer.json  setup-node.sh
.github/workflows/: build-devcontainer.yml  devcontainer.yaml  update-devcontainer.yml
.github/workflows/.devcontainer/: Dockerfile  devcontainer.json
.windsurf/rules/: service-relations.md
challenges/: 01-latency-mystery.md  02-database-mystery.md  03-error-handling.md  03-memory-optimization.md  04-resource-management.md  05-concurrency.md
config/: tank_settings.json
docker/postgres/: init-multiple-dbs.sh
docs/: observability_lecture.md
scripts/: generate_large_json.py
services/aqua-brain/: Cargo.toml  Dockerfile.dev  Shuttle.toml  simplified_lecture.txt
services/aqua-brain/src/: challenges.rs  main.rs  main.rs.bak  main.rs.original
services/aqua-brain/src/lectures/: challenge1_solution.md  challenge2.md  challenge2_solution.md  challenge3.md  challenge3_solution.md  challenge4.md  challenge4_solution.md
services/aqua-monitor/: Cargo.toml  Shuttle.toml
services/aqua-monitor/src/: challenges.rs  main.rs
services/species-hub/: Cargo.toml  Shuttle.toml
services/species-hub/migrations/: 20250510000000_create_species.sql  20250614000000_add_trigram_index.sql  20250615132000_add_species_trgm_indexes.sql
services/species-hub/src/: challenges.rs  main.rs
shellcon-backend/services/aqua-brain/: Shuttle.toml
shellcon-backend/services/aqua-brain/src/: challenges.rs  main.rs
shellcon-backend/services/aqua-brain/src/lectures/: challenge1.md  challenge1_solution.md  challenge2.md  challenge2_solution.md  challenge3.md  challenge3_solution.md  challenge4.md  challenge4_solution.md
shellcon-backend/services/aqua-monitor/: Cargo.toml  Shuttle.toml
shellcon-backend/services/aqua-monitor/config/: tank_settings.json
shellcon-backend/services/aqua-monitor/migrations/: 20250510000000_create_tank_readings.sql
shellcon-backend/services/aqua-monitor/src/: challenges.rs
shellcon-backend/services/species-hub/: Cargo.toml  Shuttle.toml
shellcon-backend/services/species-hub/migrations/: 20250513000000_create_tanks.sql
shellcon-backend/services/species-hub/src/: challenges.rs  main.rs
shellcon-frontend/: package-lock.json  package.json
shellcon-frontend/src/components/challenge/hooks/: useChallengeValidation.ts
shellcon-frontend/src/components/effects/: ConfettiCelebration.tsx
shellcon-frontend/src/pages/: Index.tsx
