[package]
name = "aqua-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# Use the same configuration as the Dad Joke generator
shuttle-axum = { version = "0.54.0" } # Removed features for axum-0-7 as it's for 0.53.0
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
shuttle-runtime = { version = "0.54.0", features = ["setup-otel-exporter"] }
shuttle-shared-db = { version = "0.54.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }

tracing = "0.1.40"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
