[package]
name = "species-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# Use the shuttle-axum re-exported packages to avoid version conflicts
shuttle-axum = { version = "0.55.0", default-features = false, features = ["axum-0-7"] }
# Don't directly depend on axum - use shuttle-axum's re-exported version
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
shuttle-runtime = { version = "0.55.0", features = ["setup-otel-exporter"] }
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }
